Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Peter McCluskey (May 31 2001)
  - patches from Moritz Willers to surpress empty "messages sorted by:" line,
   add | after "Previous Folder, Thread view", etc.

Peter McCluskey (May 30 2001)
  - changes to Swedish from peter karlsson.

Peter McCluskey (May 22 2001)
  - change default value for avoid_top_indices to none.
  - fixed make to handle pcre properly.

Peter McCluskey (May 16 2001)
  - fix pathnames in inline attachments with msgsperfolder/folder_by_date

Peter McCluskey (May 11 2001)
  - add filter options (using pcre regular expressions):
     filter_out
     filter_require
     filter_out_full_body
     filter_require_full_body

Peter McCluskey (May 9 2001)
  - fix links to attachments in subdir index files.

Peter McCluskey (May 8 2001)
  - fixed bug with incremental update that caused the index files to
   ignore messages beyond set_searchbackmsgnum.

Daniel Stenberg (May 8 2001)
  - Removed the last traces of mprintf.[ch] and made the trio stuff work
    completely as a replacement.

Peter McCluskey (May 7 2001)
  - fixes to trio configuration.

Peter McCluskey (May 4 2001)
  - another fix to avoid_top_indices = folders.
  - enhance show_msg_links to support links only at top or only at bottom.
  - add show_index_links option to control links from message page to indices.
  - add txtsuffix option
  - On/Yes now converted to 1 for CFG_INTEGER options (for compatibility
   with options that used to be CFG_SWITCH's)
  - fix append option so that it handles uuencoded attachments and
    mdecodeQP() calls correctly.

Kent Landfield (May 4 2001)
  - corrected compilation issue for Sun CC in string.c
  - corrected check for set_custom_archives in hypermail.c

Peter McCluskey (May 1 2001)
  - convert mprintf calls to trio calls

Peter McCluskey (Apr 27 2001)
  - allow incremental update with folder_by_date on empty archive, improve